templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www
  namespace: www
  annotations:
    ingressClassName: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
spec:
  rules:
  - host: www.itlusions.nl
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: www
            port:
              number: 3000
  tls:
  - hosts:
    - www.itlusions.nl
    secretName: www-itlusions-nl-tls
